--- a/package.json
+++ b/package.json
@@ -37,11 +37,19 @@
         },
         {
           "name": "@electron-forge/maker-deb",
-          "config": {}
+          "config": {
+            "options": {
+              "icon": "src/img/icon.png"
+            }
+          }
         },
         {
           "name": "@electron-forge/maker-rpm",
-          "config": {}
+          "config": {
+            "options": {
+              "icon": "src/img/icon.png"
+            }
+          }
         }
       ]
     }
